app uplate open api fixed
